# Project---Hybrid-Vector-Search-Queries

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  baseline.cpp  run.sh
include/: baseline.hpp  changes.hpp  io.h  optimized.hpp  optimized_1.hpp  optimized_2.hpp  optimized_impl.h  optimized_parallel.hpp  perfevent.hpp  threading.hpp  util.h
logs/: baseline.txt  changes.txt  data.txt  optimized.txt
presentation/: Project – Hybrid Vector Search Queries.pptx
report/: report.docx
src/: compare_data.cpp  fp_inaccuracy_test.cpp  hadd_test.cpp  test.cpp  write_data.c  write_query.c
